--- a/web/static/css/dynamictable.css
+++ b/web/static/css/dynamictable.css
@@ -310,7 +310,7 @@ li.dynamictable-captionaction {
 	background-color:#f3f3f3;
 	border:0.5px solid black;
 	font-size:10pt;
-	height:16px !important;
+	height:1.2em !important;
 	padding-left:7px;
 	padding-right:7px;
 	white-space:nowrap !important;
